--- a/styles/utils.css
+++ b/styles/utils.css
@@ -39,7 +39,8 @@ span {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    padding: 2rem;
+    padding-block: 2rem;
+    padding-inline: 10rem;
     margin-block-end: 2rem;
 }
 
