--- a/styles/main_services.css
+++ b/styles/main_services.css
@@ -23,15 +23,15 @@
     bottom: 20px;
 }
 
-.services_list {
-    width: 100%;
-    padding: 1rem 0;
+.tab {
+    width: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     max-width: 100%;
-    overflow: hidden; 
-
+    margin-block: 1rem;
+    gap: 0.5rem;
+    padding: 0.5rem;
 }
 
 
@@ -71,12 +71,12 @@
     font-weight: 500;
 }
 
-.tab-content {
+.tabcontent {
     display: flex;
     justify-content: center;
 }
 
-.tab-content-info{
+.tabcontent-info{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -86,7 +86,7 @@
     padding: 1rem;
 }
 
-.tab-content img {
+.tabcontent img {
     height: 300px;
     min-width: 50%;
     object-fit: cover;
@@ -109,6 +109,7 @@
         opacity: 1;
     }
 }
+
 
 
 @media (min-width: 768px) {
