--- a/styles/test.css
+++ b/styles/test.css
@@ -1,29 +1,29 @@
 /* Style the tab */
-.tab {
-    overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
-  }
   
   /* Style the buttons that are used to open the tab content */
   .tab button {
     background-color: inherit;
     float: left;
-    border: none;
     outline: none;
     cursor: pointer;
-    padding: 14px 16px;
-    transition: 0.3s;
+    padding: 0.5rem 1rem;
+    transition: transform 0.3s ease;
+    border-radius: 100px;
+    font-size: var(--size-base);
+    background-color: #ddd;
   }
   
   /* Change background color of buttons on hover */
   .tab button:hover {
     background-color: #ddd;
+    transform: translateY(-3px);
+    outline: 2px solid rgba(0, 0, 0, 0.3);
   }
   
   /* Create an active/current tablink class */
   .tab button.active {
     background-color: #ccc;
+    outline: 2px solid black;
   }
   
   /* Style the tab content */
