--- a/styles/main_events.css
+++ b/styles/main_events.css
@@ -3,6 +3,10 @@
     padding-block: 5rem;
 }
 
+.events .section_title {
+    margin-bottom: 1rem;
+}
+
 .event_cards_wrapper {
     --gap : 2rem;
     display: flex;
