--- a/styles/header.css
+++ b/styles/header.css
@@ -20,6 +20,41 @@
     display: none;
 }
 
+.header__menu {
+    width: 100%;
+    height: 50vh;
+    background-color: var(--clr-yellow)
+}
+
+.header__menu ul {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    flex-direction: column;
+    list-style: none;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem;
+}
+
+.header__menu ul li {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+}
+
+.header__menu ul li > * {
+    color: black;
+}
+
+.header__menu ul li:hover {
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
 .header__list ul li{
     height: 60px;
     display: grid;
