--- a/styles/utils.css
+++ b/styles/utils.css
@@ -67,6 +67,10 @@ span {
     .section {
         padding-inline: 0;
     }
+    .button {
+        padding: 0.5rem;
+        font-size: var(--size-base);
+    }
 }
 
 @media (min-width: 1024px) {
