--- a/styles/main_hero.css
+++ b/styles/main_hero.css
@@ -85,7 +85,7 @@
         justify-content: center;
         align-items: center;
         padding-inline: 0;
-        height: calc(100vh - var(--header-height));
+        height: calc(90vh - var(--header-height));
     }
     .hero__inner {
         flex-direction: column;
@@ -108,11 +108,24 @@
     .hero__inner img {
         display: none;
     }
-    .hero__socials {
-        flex-direction: column;
-    }
+
     .hero__socials__divider {
         display: none;
+    }
+
+    .hero__socials {
+        border: 1px solid red;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .hero__socials ul {
+        display: flex;
+        gap: 1rem;
+    }
+
+    .hero__socials ul li {
+        margin-right: 0;
     }
 
     .events {
