--- a/styles/utils.css
+++ b/styles/utils.css
@@ -68,8 +68,8 @@ span {
         padding-inline: 0;
     }
     .button {
-        padding: 0.5rem;
-        font-size: var(--size-base);
+        padding: 0.3rem;
+        font-size: var(--size-xs);
     }
 }
 
