--- a/styles/main_hero.css
+++ b/styles/main_hero.css
@@ -15,6 +15,10 @@
     animation-range: exit -100px;
 }
 
+.header_icon {
+    color: black;
+}
+
 @keyframes fade-out {
     to {
         opacity: 0;
