--- a/styles/footer.css
+++ b/styles/footer.css
@@ -66,8 +66,26 @@ footer {
 }
 
 @media (max-width: 768px) {
+
+    .footer_img {
+        display: none;
+    }
+    footer {
+        width: 100%;
+        height: auto;
+        padding-inline: 0;
+    }
     .footer_section_wrapper {
         flex-direction: column;
+        width: 100%;
+        height: auto;
+    }
+    .footer_section {
+        width: 100%;
+        padding-inline: 4rem;
+        padding-bottom: 2rem;
+        margin: 0;
+        text-align: center;
     }
 }
 
