--- a/styles/header.css
+++ b/styles/header.css
@@ -28,7 +28,10 @@
     transform: translateY(var(--header-height));
     width: 100%;
     height: 50vh;
-    background-color: var(--clr-yellow);
+    background: var(--clr-header);
+    backdrop-filter: blur(10px); /* Apply blur effect */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    
 }
 
 .header__menu ul {
