--- a/styles/header.css
+++ b/styles/header.css
@@ -27,11 +27,11 @@
     top: 0;
     transform: translateY(var(--header-height));
     width: 100%;
-    height: 50vh;
+    height: 40vh;
     background: var(--clr-header);
     backdrop-filter: blur(10px); /* Apply blur effect */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    
+    transition: 0.3s;
 }
 
 .header__menu ul {
