--- a/styles/main_services.css
+++ b/styles/main_services.css
@@ -34,6 +34,41 @@
     padding: 0.5rem;
 }
 
+/* Style the tab */
+  
+  /* Style the buttons that are used to open the tab content */
+  .tab button {
+    background-color: inherit;
+    float: left;
+    outline: none;
+    cursor: pointer;
+    padding: 0.5rem 1rem;
+    transition: transform 0.3s ease;
+    border-radius: 100px;
+    font-size: var(--size-base);
+    background-color: #ddd;
+  }
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    background-color: #ddd;
+    transform: translateY(-3px);
+    outline: 2px solid rgba(0, 0, 0, 0.3);
+  }
+  
+  /* Create an active/current tablink class */
+  .tab button.active {
+    background-color: #ccc;
+    outline: 2px solid black;
+  }
+  
+  /* Style the tab content */
+  .tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border-top: none;
+  }
+
 
 .services_list_inner {
     width: 100%;
