--- a/styles/inner_services.css
+++ b/styles/inner_services.css
@@ -16,6 +16,11 @@
     align-items: flex-start;
 }
 
+.inner_services_details p {
+    padding-right: 3rem;
+}
+
+
 
 .inner_services_details .section_title {
     text-align: left;
@@ -25,6 +30,10 @@
 .isc_image {
     border-radius: 10px;
     overflow: hidden;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .book_now {
