--- a/styles/services_cards.css
+++ b/styles/services_cards.css
@@ -1,4 +1,5 @@
 .services_wrapper {
+    padding-top: 20px;
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* Three equal-width columns */
     grid-gap: 20px;
