--- a/styles/footer.css
+++ b/styles/footer.css
@@ -4,11 +4,32 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     padding-block-start: 2rem;
     padding-block-end: 1rem;
     padding-inline: 2rem;
     /* margin-block-end: 2rem; */
+}
+
+.footer_menu {
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
+
+.footer_section ul li > *{
+    color: white;
+}
+
+.footer_section a:hover{
+    color: var(--clr-yellow);
+}
+
+.contact_footer {
+    cursor: default;
 }
 
 .newsletter a {
@@ -20,7 +41,7 @@ footer {
 
 .footer_heading {
     height: 100%;
-    width: 100%;
+    width: 30%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -38,22 +59,43 @@ footer {
     display: flex;
     flex-direction: row;
     gap: 2rem;
-    width: 100%;
+    width: auto;
     height: 100%;
     position: relative;
 }
 
 
-.footer_section_wrapper > * {
-    flex: 1;
-}
-
 .footer_section {
     height: 100%;
-    width: 100%;
+    width: 30%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    margin-inline-end: 5rem;
+}
+
+.footer_links {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+}
+
+.footer_links ul li > *{
+    color: white;
+}
+
+.footer_links li {
+    margin-right: 2rem;
+}
+
+.footer_links ul {
+    list-style: none;
+    display: flex;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    margin-block: 1rem;
 }
 
 .footer_section > * {
