--- a/styles/header.css
+++ b/styles/header.css
@@ -56,6 +56,14 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.5);
 }
 
+.header__menu ul li a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
 .header__menu ul li:last-child {
     border-bottom: none;
 }
