--- a/styles/main_services.css
+++ b/styles/main_services.css
@@ -37,7 +37,7 @@
     max-width: 100%;
     margin-block: 1rem;
     gap: 0.5rem;
-    padding: 0.5rem;
+    padding-block: 1rem;
 }
 
 /* Style the tab */
@@ -118,14 +118,19 @@
     justify-content: center;
 }
 
-.tabcontent-info{
+.tabcontent-info {
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 10px;
-    align-items: center;
-    text-align: center;
-    padding: 1rem;
+    align-items: flex-start;
+    text-align: left;
+    padding-block: 1rem;
+    padding-inline: 2rem;
+}
+
+.tabcontent-info .button {
+    margin-block-start: 0.5rem;
 }
 
 .tabcontent img {
