--- a/styles/services_cards.css
+++ b/styles/services_cards.css
@@ -15,7 +15,10 @@
     position: relative;
     overflow: hidden;
     cursor: pointer;
+}
 
+.services_header {
+    text-align: center;
 }
 
 .services_cards:hover {
@@ -32,12 +35,20 @@
 
     .services_cards_details {
         background-color: rgba(0, 0, 0, 0.5);
+        justify-content: center;
+    }
+    
+    .services_cards_details h3 {
+        background-color: rgba(0, 0, 0, 0)
     }
 
 }
 
 .services_cards_details{
-    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    height: 100%;
     width: 100%;
     color: #fff;
     position: absolute;
@@ -52,13 +63,16 @@
 
 .services_cards_details p {
     display: none;
-    text-align: justify;
+    text-align: center;
     font-size: var(--size-sm);
     line-height: 1rem;
+    padding: 1rem;
 }
 
 .services_cards_details h3 {
     font-size: var(--size-sm);
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
 }
 
 .services_cards_details > * {
