--- a/styles/main_hero.css
+++ b/styles/main_hero.css
@@ -1,173 +1,191 @@
 .hero {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: calc(100vh - var(--header-height));
-    padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: calc(100vh - var(--header-height));
+  padding: 2rem;
+  position: relative;
+  overflow-x: hidden;
 }
 
-.hero{
-    animation: fade-out linear;
-    animation-timeline: view();
-    animation-range: exit -100px;
+.custom-shape-divider-bottom-1706944670 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
 }
+
+.custom-shape-divider-bottom-1706944670 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 102px;
+}
+
+.custom-shape-divider-bottom-1706944670 .shape-fill {
+  fill: #f5b539;
+}
+/* .hero {
+  animation: fade-out linear;
+  animation-timeline: view();
+  animation-range: exit -100px;
+} */
 
 .header_icon {
-    color: black;
+  color: black;
 }
 
 @keyframes fade-out {
-    to {
-        opacity: 0;
-    }
+  to {
+    opacity: 0;
+  }
 }
 
 .hero__inner {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: auto;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: auto;
 }
 
 .hero__inner1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 32px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 32px;
 }
 
 .hero__socials {
-    width: 100%;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
-.hero__socials ul{
-    list-style: none;
-    display: flex;
-    padding-left: 0;
+.hero__socials ul {
+  list-style: none;
+  display: flex;
+  padding-left: 0;
 }
 
 .hero__socials ul li a {
-    color: var(--clr-slate);
+  color: var(--clr-slate);
 }
-.hero__socials ul li{
-    margin-right: 32px;
+.hero__socials ul li {
+  margin-right: 32px;
 }
 
 .hero__socials .hero__socials__divider {
-    width: 100%;
-    border-bottom: 5px solid var(--clr-yellow);
+  width: 100%;
+  border-bottom: 5px solid var(--clr-yellow);
 }
 
 .hero__changing {
-    color: var(--clr-yellow);
-    opacity: 1;
-    transition: opacity 0.5s ease-in-out;
+  color: var(--clr-yellow);
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
 }
 
 .test {
-    background-color: var(--clr-powderblue);
-    height: 100px;
+  background-color: var(--clr-powderblue);
+  height: 100px;
 }
 
-
 @media (max-width: 768px) {
-    .hero {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding-inline: 0;
-        height: calc(90vh - var(--header-height));
-    }
-    .hero__inner {
-        flex-direction: column;
-    }
+  .hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-inline: 0;
+    height: calc(90vh - var(--header-height));
+  }
+  .hero__inner {
+    flex-direction: column;
+  }
 
-    .hero__inner1 {
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-    }
+  .hero__inner1 {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
 
-    .hero__inner1 > *:not(p):not(a) {
-        font-size: var(--size-3xl);
-    }
+  .hero__inner1 > *:not(p):not(a) {
+    font-size: var(--size-3xl);
+  }
 
-    
-    .hero__inner img {
-        display: none;
-    }
+  .hero__inner img {
+    display: none;
+  }
 
-    .hero__socials__divider {
-        display: none;
-    }
+  .hero__socials__divider {
+    display: none;
+  }
 
-    .hero__socials {
-        display: flex;
-        justify-content: center;
-    }
-    
-    .hero__socials ul {
-        display: flex;
-        gap: 2rem;
-    }
+  .hero__socials {
+    display: flex;
+    justify-content: center;
+  }
 
-    .hero__socials ul li {
-        margin-right: 0;
-    }
+  .hero__socials ul {
+    display: flex;
+    gap: 2rem;
+  }
 
-    .events {
-        display: none;
-    }
+  .hero__socials ul li {
+    margin-right: 0;
+  }
 
-    .tabcontent {
-        flex-direction: column;
-    }
-    br {
-        display: none;
-    }
+  .events {
+    display: none;
+  }
 
+  .tabcontent {
+    flex-direction: column;
+  }
+  br {
+    display: none;
+  }
 }
 
 @media (min-width: 768px) {
-    .hero h1 {
-        font-size: var(--size-4xl);
-    }
-    .hero img {
-        height: 300px;
-        width: 300px;
-    }
+  .hero h1 {
+    font-size: var(--size-4xl);
+  }
+  .hero img {
+    height: 300px;
+    width: 300px;
+  }
 }
 
 @media (min-width: 1024px) {
-    .hero h1 {
-        font-size: var(--size-6xl);
-    }
-    .hero img {
-        height: 400px;
-        width: 400px;
-    }
+  .hero h1 {
+    font-size: var(--size-6xl);
+  }
+  .hero img {
+    height: 400px;
+    width: 400px;
+  }
 }
 
 @media (min-width: 1440px) {
-    .section {
-        max-width: 1440px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    
-    .hero h1 {
-        font-size: var(--size-8xl);
-    }
-    .hero img {
-        height: 500px;
-        width: 500px;
-    }
+  .section {
+    max-width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
+  .hero h1 {
+    font-size: var(--size-8xl);
+  }
+  .hero img {
+    height: 500px;
+    width: 500px;
+  }
 }
