--- a/styles/main_partners.css
+++ b/styles/main_partners.css
@@ -1,33 +1,34 @@
 .partners {
-    height: auto;
-    background-color: rgb(53, 53, 53);
-    color: var(--clr-clear);
-    margin-bottom: 0;
-    padding-block: 4rem;
-    padding-inline: 4rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-top-left-radius: 100px;
-    border-top-right-radius: 100px;
+  height: auto;
+  background-color: rgb(53, 53, 53);
+  color: var(--clr-clear);
+  margin-bottom: 0;
+  padding-block: 4rem;
+  padding-inline: 4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-top-left-radius: 100px;
+  border-top-right-radius: 100px;
+  position: relative;
 }
 
 .partners .section_title > * {
-    color: var(--clr-clear);
+  color: var(--clr-clear);
 }
 
 .scroller__inner img {
-    filter: invert(1);
-    height: 50px;
+  filter: invert(1);
+  height: 50px;
 }
 
 .scroller {
-    max-width: 100%;
-    margin-inline: 2rem;
-    padding: 2rem;
-    mask: linear-gradient(90deg, transparent, white 30%, white 70%, transparent);
-    overflow: hidden;
+  max-width: 100%;
+  margin-inline: 2rem;
+  padding: 2rem;
+  mask: linear-gradient(90deg, transparent, white 30%, white 70%, transparent);
+  overflow: hidden;
 }
 
 /* .scroller__inner:hover {
@@ -35,15 +36,15 @@
 } */
 
 .scroller__inner {
-    width: max-content;
-    display: flex;
-    gap: 2rem;
-    overflow: hidden;
-    animation: scroll 35s linear infinite;
+  width: max-content;
+  display: flex;
+  gap: 2rem;
+  overflow: hidden;
+  animation: scroll 35s linear infinite;
 }
 
 @keyframes scroll {
-    to {
-        transform: translate(calc(-50% - 1rem));
-    }
+  to {
+    transform: translate(calc(-50% - 1rem));
+  }
 }
