--- a/styles/main_services.css
+++ b/styles/main_services.css
@@ -1,17 +1,41 @@
 .services {
+  width: 100vw;
+  height: auto;
+  padding-block-start: 2rem;
+  padding-block-end: 8rem;
+  position: relative;
+}
 
-    width: 100vw;
-    height: auto;
-    padding-block: 5rem;
-    position: relative;
+.custom-shape-divider-bottom-1706945003 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.custom-shape-divider-bottom-1706945003 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 102px;
+}
+
+.custom-shape-divider-bottom-1706945003 .shape-fill {
+  fill: #f0ead8;
 }
 
 .services_background {
-    background-color: var(--clr-yellow);
-    position: relative;
+  background-color: var(--clr-yellow);
+  position: relative;
 }
 
-.services_background::before,
+.hero_background {
+  position: relative;
+}
+
+/* .services_background::before,
 .services_background::after {
     content: '';
     position: absolute;
@@ -19,193 +43,179 @@
     right: 0;
     height: 5px;
     background-color: var(--clr-background);
-}
+} */
 
-.services_background::before {
-    top: 20px;
+/* .services_background::before {
+  top: 20px;
 }
 
 .services_background::after {
-    bottom: 20px;
-}
+  bottom: 20px;
+} */
 
 .tab {
-    width: auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    max-width: 100%;
-    margin-block: 1rem;
-    gap: 0.5rem;
-    padding-block: 1rem;
+  width: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 100%;
+  margin-block: 1rem;
+  gap: 0.5rem;
+  padding-block: 1rem;
 }
 
 /* Style the tab */
-  
-  /* Style the buttons that are used to open the tab content */
-  .tab button {
-    background-color: inherit;
-    float: left;
-    outline: none;
-    cursor: pointer;
-    padding: 0.5rem 1rem;
-    transition: transform 0.3s ease;
-    border-radius: 100px;
-    font-size: var(--size-base);
-    background-color: #ddd;
-  }
-  
-  /* Change background color of buttons on hover */
-  .tab button:hover {
-    background-color: #ddd;
-    transform: translateY(-3px);
-    outline: 2px solid rgba(0, 0, 0, 0.3);
-  }
-  
-  /* Create an active/current tablink class */
-  .tab button.active {
-    background-color: #ccc;
-    outline: 2px solid black;
-  }
-  
-  /* Style the tab content */
-  .tabcontent {
-    display: none;
-    padding: 6px 12px;
-    border-top: none;
-  }
 
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  background-color: inherit;
+  float: left;
+  outline: none;
+  cursor: pointer;
+  padding: 0.5rem 1rem;
+  transition: transform 0.3s ease;
+  border-radius: 100px;
+  font-size: var(--size-base);
+  background-color: #ddd;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+  transform: translateY(-3px);
+  outline: 2px solid rgba(0, 0, 0, 0.3);
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+  outline: 2px solid black;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border-top: none;
+}
 
 .services_list_inner {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    gap: 1rem;
-    list-style: none;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  gap: 1rem;
+  list-style: none;
 }
 
 .services_list_inner button {
-    padding: 0.5rem 0.25rem;
-    background-color: var(--clr-background);
-    border-radius: 5px;
-    transition: transform 0.3s;
+  padding: 0.5rem 0.25rem;
+  background-color: var(--clr-background);
+  border-radius: 5px;
+  transition: transform 0.3s;
 }
-
 
 @keyframes bounce {
-    from {
-        transform: translateY(10px);
-    }
-    from {
-        transform: translateY(0px);
-    }
+  from {
+    transform: translateY(10px);
+  }
+  from {
+    transform: translateY(0px);
+  }
 }
 
-
-
 .services_list_inner button:hover {
-    transform: translateY(-5px);
-    outline: 2px solid rgba(0, 0, 0, 0.3);
+  transform: translateY(-5px);
+  outline: 2px solid rgba(0, 0, 0, 0.3);
 }
 
 .tab.active {
-    outline: 2px solid black;
-    font-weight: 500;
+  outline: 2px solid black;
+  font-weight: 500;
 }
 
 .tabcontent {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .tabcontent-info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 10px;
-    align-items: flex-start;
-    text-align: left;
-    padding-block: 1rem;
-    padding-inline: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+  align-items: flex-start;
+  text-align: left;
+  padding-block: 1rem;
+  padding-inline: 2rem;
 }
 
 .tabcontent-info .button {
-    margin-block-start: 0.5rem;
+  margin-block-start: 0.5rem;
 }
 
 .tabcontent img {
-    height: 300px;
-    min-width: 50%;
-    object-fit: cover;
-    border-radius: 10px;
-    overflow: hidden;
-
+  height: 300px;
+  min-width: 50%;
+  object-fit: cover;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .tab-content > img {
-    scale: .8;
-    opacity: 0;
-    animation: fade-in linear forwards;
-    animation-timeline: view();
-    animation-range: entry;
+  scale: 0.8;
+  opacity: 0;
+  animation: fade-in linear forwards;
+  animation-timeline: view();
+  animation-range: entry;
 }
 
 @keyframes fade-in {
-    to {
-        scale: 1;
-        opacity: 1;
-    }
+  to {
+    scale: 1;
+    opacity: 1;
+  }
 }
 
-
-
 @media (min-width: 768px) {
-    .services_list_inner {
-        display: flex;
-        gap: 0.5rem;
-        list-style: none;
-    }
-    .services_list_inner button {
-        height: auto;
-        width: 150px;
-        font-size: var(--size-sm);
-    }
-    .tab-content-info{
-        font-size: var(--size-base);
-    }
-
-
+  .services_list_inner {
+    display: flex;
+    gap: 0.5rem;
+    list-style: none;
+  }
+  .services_list_inner button {
+    height: auto;
+    width: 150px;
+    font-size: var(--size-sm);
+  }
+  .tab-content-info {
+    font-size: var(--size-base);
+  }
 }
 
 @media (min-width: 1024px) {
-    .services_list_inner button {
-        height: auto;
-        min-width: 120px;
-        font-size: var(--size-sm);
-    }
-    .tab-content-info{
-        max-width: 40%;
-        font-size: var(--size-base);
-    }
-
-
+  .services_list_inner button {
+    height: auto;
+    min-width: 120px;
+    font-size: var(--size-sm);
+  }
+  .tab-content-info {
+    max-width: 40%;
+    font-size: var(--size-base);
+  }
 }
 @media (min-width: 1440px) {
-    .services_list_inner button {
-        height: auto;
-        width: 150px;
-        font-size: var(--size-sm);
-    }
+  .services_list_inner button {
+    height: auto;
+    width: 150px;
+    font-size: var(--size-sm);
+  }
 
-    .tab-content-info{
-        max-width: 30%;
-        font-size: var(--size-base);
-    }
+  .tab-content-info {
+    max-width: 30%;
+    font-size: var(--size-base);
+  }
 
-    .tab-content img {
-        max-width: 50%;
-    }
-    
+  .tab-content img {
+    max-width: 50%;
+  }
 }
-
-
